<?xml version="1.0" encoding="utf-8"?><!-- Options menu for the MainActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_insert_demo_data"
        android:title="@string/insert_demo_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_data"
        android:title="@string/delete_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_product_data"
        android:icon="@drawable/ic_add_shopping_cart2"
        android:title="@string/add_product"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter_data"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/filter_products"
        app:showAsAction="always" />

</menu>