<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/edit_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/product_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:maxLength="40"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/edit_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">


            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/product_image_dim"
                android:layout_height="@dimen/product_image_dim"
                android:contentDescription="@string/product_image"
                android:gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder" />

            <ImageButton
                android:id="@+id/rotate_photo"
                android:layout_width="@dimen/rotate_button_dim"
                android:layout_height="@dimen/rotate_button_dim"
                android:layout_marginLeft="@dimen/edit_margin"
                android:layout_marginStart="@dimen/edit_margin"
                android:layout_marginTop="@dimen/rotate_button_dim"
                android:contentDescription="@string/rotate_photo"
                android:src="@drawable/ic_action_turn_right" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/product_price"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:maxLength="14"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/edit_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/product_stock_quantity"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/decrease_quantity"
                android:src="@drawable/ic_remove_circle_outline" />

            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:hint="@string/quantity"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/edit_text_size" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/increase_quantity"
                android:src="@drawable/ic_add_circle_outline" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/product_ordered_quantity"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <EditText
                android:id="@+id/product_ordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/ordered_quantity_hint"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delivered"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/edit_text_size"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/delivered_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:contentDescription="@string/delivered_quantity"
                android:scaleType="fitXY"
                android:src="@drawable/ic_local_shipping" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/supplier_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier"
            android:inputType="text"
            android:maxLength="40"
            android:textSize="@dimen/edit_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/supplier_phone"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <EditText
                android:id="@+id/supplier_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="12"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/edit_text_size"
                tools:phoneNumber="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_margin"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/order"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/edit_text_size"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/phone_order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/phone_order"
                android:scaleType="fitXY"
                android:src="@drawable/supplier2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin"
            android:text="@string/supplier_email"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/edit_text_size" />

    </LinearLayout>

</ScrollView>